Added confirm for deleting images, fixes #22

--- a/translations/en.yml
+++ b/translations/en.yml
@@ -15,3 +15,5 @@ ms.file_manager:
     buttons:
       update: Update
       delete: Delete
+    delete:
+      confirm: Are you sure you want to delete this file?
