Fixing a few bugs with detail page
- Dimensions showing for all types not just images
- Dimensions spelt incorrectly

--- a/translations/en.yml
+++ b/translations/en.yml
@@ -6,7 +6,7 @@ ms.file_manager:
     labels:
       name: File Name
       type: Type
-      dimensions: Dimenions
+      dimensions: Dimensions
       author: Uploaded By
       tags: Tags
       alt-text: Alt Text
